<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.svsu.satisfaction.customer.jtclippe.customersatisfactionsurvey.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question1" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="10" />

            <TextView
                android:id="@+id/seekBarProgress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:text="0"
                android:layout_marginBottom="25dp"/>

            <TextView
                android:id="@+id/question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radSatisfy1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satisfy1" />

                <RadioButton
                    android:id="@+id/radSatisfy2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satisfy2" />

                <RadioButton
                    android:id="@+id/radSatisfy3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satisfy3" />

                <RadioButton
                    android:id="@+id/radSatisfy4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satisfy4" />

                <RadioButton
                    android:id="@+id/radSatisfy5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/satisfy5" />
            </RadioGroup>

            <TextView
                android:id="@+id/question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:rowCount="5"
                android:columnCount="2"
                android:layout_marginBottom="25dp">

                <CheckBox
                    android:id="@+id/chkDescribe1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe1" />

                <CheckBox
                    android:id="@+id/chkDescribe2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe2" />

                <CheckBox
                    android:id="@+id/chkDescribe3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe3" />

                <CheckBox
                    android:id="@+id/chkDescribe4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe4" />

                <CheckBox
                    android:id="@+id/chkDescribe5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe5" />

                <CheckBox
                    android:id="@+id/chkDescribe6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe6" />

                <CheckBox
                    android:id="@+id/chkDescribe7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe7" />

                <CheckBox
                    android:id="@+id/chkDescribe8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe8" />

                <CheckBox
                    android:id="@+id/chkDescribe9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe9" />

                <CheckBox
                    android:id="@+id/chkDescribe10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/describe10" />
            </GridLayout>


            <TextView
                android:id="@+id/question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question4" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radNeeds1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/needs1" />

                <RadioButton
                    android:id="@+id/radNeeds2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/needs2" />

                <RadioButton
                    android:id="@+id/radNeeds3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/needs3" />

                <RadioButton
                    android:id="@+id/radNeeds4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/needs4" />

                <RadioButton
                    android:id="@+id/radNeeds5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/needs5" />
            </RadioGroup>

            <TextView
                android:id="@+id/question5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radQuality1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quality1" />

                <RadioButton
                    android:id="@+id/radQuality2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quality2" />

                <RadioButton
                    android:id="@+id/radQuality3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quality3" />

                <RadioButton
                    android:id="@+id/radQuality4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quality4" />

                <RadioButton
                    android:id="@+id/radQuality5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/quality5" />
            </RadioGroup>

            <TextView
                android:id="@+id/question6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question6" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radValue1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value1" />

                <RadioButton
                    android:id="@+id/radValue2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value2" />

                <RadioButton
                    android:id="@+id/radValue3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value3" />

                <RadioButton
                    android:id="@+id/radValue4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value4" />

                <RadioButton
                    android:id="@+id/radValue5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/value5" />
            </RadioGroup>

            <TextView
                android:id="@+id/question7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question7" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radResponsive1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive1" />

                <RadioButton
                    android:id="@+id/radResponsive2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive2" />

                <RadioButton
                    android:id="@+id/radResponsive3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive3" />

                <RadioButton
                    android:id="@+id/radResponsive4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive4" />

                <RadioButton
                    android:id="@+id/radResponsive5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive5" />

                <RadioButton
                    android:id="@+id/radResponsive6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/responsive6" />
            </RadioGroup>

            <TextView
                android:id="@+id/question8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question8" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radTime1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time1" />

                <RadioButton
                    android:id="@+id/radTime2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time2" />

                <RadioButton
                    android:id="@+id/radTime3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time3" />

                <RadioButton
                    android:id="@+id/radTime4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time4" />

                <RadioButton
                    android:id="@+id/radTime5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time5" />

                <RadioButton
                    android:id="@+id/radTime6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time6" />
            </RadioGroup>

            <TextView
                android:id="@+id/question9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question9" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp">

                <RadioButton
                    android:id="@+id/radPurchase1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchase1" />

                <RadioButton
                    android:id="@+id/radPurchase2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchase2" />

                <RadioButton
                    android:id="@+id/radPurchase3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchase3" />

                <RadioButton
                    android:id="@+id/radPurchase4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchase4" />

                <RadioButton
                    android:id="@+id/radPurchase5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/purchase5" />
            </RadioGroup>

            <TextView
                android:id="@+id/question10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question10" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:layout_marginBottom="25dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonText"
                android:onClick="showDone"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
